# kanwar_grpc_server

./: Cargo.toml  Dockerfile_for_server  build.rs
src/: client.rs  item_data.proto  main.rs  server.rs
