[package]
name = "kanwar_grpc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "item-server"
path = "src/server.rs"

[[bin]]
name = "item-client"
path = "src/client.rs"


[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = {version = "1.28", features = ["full"]}

[build-dependencies]
tonic-build = "0.9.2"